--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@nextui-org/react": "^2.3.0",
     "bootstrap-icons": "^1.11.3",
-    "framer-motion": "^11.2.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0"
   },
@@ -27,10 +29,13 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "framer-motion": "^11.2.6",
     "postcss": "^8.4.38",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
